tests/exprs/tstmtexp.nim
discard """
  file: "tstmtexp.nim"
  line: 8
  errormsg: "value of type 'int literal(5)' has to be discarded"
"""
# Test 3

1+4

